# preval

./: .gitignore  .log4brains.yml  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  package-lock.json  package.json
.github/workflows/: adr-docs.yml
PLANNING/DONE/: 000050-initialize-rust-project.md  000100-implement-opentelemetry-parsing.md  000150-create-basic-tui.md  000200-add-handshake-protocol.md  000250-display-evaluation-progress.md
PLANNING/TODO/: 000050-initialize-rust-project.md  000100-implement-opentelemetry-parsing.md  000100-view-evaluation-progress.md  000150-create-basic-tui.md  000200-add-handshake-protocol.md  000200-compare-current-vs-previous.md  000250-display-evaluation-progress.md  000300-generate-evaluation-reports.md  000300-select-evaluation-options.md  000400-compare-current-vs-previous.md  000500-explore-sample-details.md  000500-save-evaluation-report.md  000600-configuration-file-support.md  000600-pause-resume-evaluation.md  000700-concurrent-evaluator-execution.md  000700-run-without-interface.md  000800-aggregate-metrics-across-evaluators.md  000800-support-multiple-evaluators.md  000900-filter-search-samples.md  000900-test-suite-management.md  001000-export-evaluation-data.md  001000-online-collection-mode.md  001100-continuous-monitoring-mode.md  001200-export-evaluation-data.md
docs/adr/: 20250615-agile-mvp-development-approach.md  20250615-language-agnostic-evaluator-interface.md  20250615-support-multiple-concurrent-evaluators.md  (+9 more)
src/: app.rs  config.rs  lib.rs  main.rs
tests/: basic_integration.rs  integration_test.rs
(+19 files in other folders)
