[package]
name = "preval"
version = "0.1.0"
edition = "2021"
authors = ["PrEval Contributors"]
description = "A cross-platform TUI for running and monitoring prompt evaluation tests"
license = "MIT"
repository = "https://github.com/johnwilger/preval"
readme = "README.md"

[lib]
name = "preval"
path = "src/lib.rs"

[[bin]]
name = "preval"
path = "src/main.rs"

[[bin]]
name = "mock_evaluator"
path = "src/bin/mock_evaluator.rs"

[lints.rust]
warnings = "deny"

[dependencies]
ratatui = "0.28.0"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
nutype = { version = "0.4", features = ["serde"] }
